--- a/projects/ngx-flamegraph/src/lib/flamegraph-node/flamegraph-node.component.html
+++ b/projects/ngx-flamegraph/src/lib/flamegraph-node/flamegraph-node.component.html
@@ -1,13 +1,15 @@
 <svg:rect
-      stroke="white"
-      stroke-width="2px"
-      [attr.width]="entry.width"
-      [attr.height]="entry.height"
-      [attr.fill]="entry.color">
+  (click)="select()"
+  stroke="white"
+  stroke-width="2px"
+  pointer-events="all"
+  [attr.width]="width"
+  [attr.height]="height"
+  [attr.fill]="entry.color">
 </svg:rect>
 <svg:foreignObject
-  [attr.width]="entry.width"
-  [attr.height]="entry.height">
+  [attr.width]="width"
+  [attr.height]="height">
   <xhtml:div class="label">
     {{entry.label}}
   </xhtml:div>
