--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -1,9 +1,1 @@
-<svg [attr.width]="width" [attr.height]="height" [attr.viewBox]="'0 0 ' + width + ' ' + height ">
-  <g ngx-flamegraph-node
-     (zoom)="zoom($event)"
-     *ngFor="let entry of entries" [entry]="entry"
-     [height]="barHeight"
-     [width]="getWidth(entry)"
-     [style.transform]="'translate(' + getLeft(entry) + 'px,' + getTop(entry) + 'px)'">
-  </g>
-</svg>
+<flamegraph [data]="entries" [height]="height" [width]="width"></flamegraph>
