Add outputs for enter, leave, and click

--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -1,1 +1,8 @@
-<flamegraph [data]="entries" [height]="height" [width]="width"></flamegraph>
+<flamegraph
+  (frameClick)="frameClick.emit($event)"
+  (frameMouseEnter)="frameMouseEnter.emit($event)"
+  (frameMouseLeave)="frameMouseLeave.emit($event)"
+  [data]="entries"
+  [height]="height"
+  [width]="width">
+</flamegraph>
