--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.html
@@ -2,6 +2,9 @@
   <svg [attr.width]="width" [attr.height]="height" [attr.viewBox]="'0 0 ' + width + ' ' + height ">
     <g flamegraph-node
        *ngFor="let entry of entries; index as i"
+       (click)="frameClick.emit(entry.original)"
+       (mouseover)="frameMouseEnter.emit(entry.original)"
+       (mouseleave)="frameMouseLeave.emit(entry.original)"
        (zoom)="select($event)"
        [entry]="entry"
        [height]="barHeight"
@@ -10,9 +13,3 @@
     </g>
   </svg>
 </div>
-
-<popup
-  *ngIf="selectedData && selectedData.length"
-  [width]="width"
-  [data]="selectedData">
-</popup>
