--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<ngx-flamegraph [data]="data" [width]="width" [height]="200"></ngx-flamegraph>
+<h2>Angular Flame Graph</h2>
+<div class="wrapper">
+  <ngx-flamegraph [data]="data" [width]="width" [height]="450"></ngx-flamegraph>
+</div>
