--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -4,6 +4,6 @@
   (frameMouseLeave)="frameMouseLeave.emit($event)"
   [layout]="siblingLayout"
   [data]="entries"
-  [height]="height"
+  [levelHeight]="levelHeight"
   [width]="width">
 </flamegraph>
