--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h2>Angular Flame Graph</h2>
 <div class="wrapper">
-  <ngx-flamegraph [data]="data" [width]="900" [height]="450"></ngx-flamegraph>
+  <ngx-flamegraph [data]="data" [width]="900" [levelHeight]="25"></ngx-flamegraph>
 </div>
