fix: proper height calculation and auto height for parents
Also enable strict null checks.

--- a/projects/ngx-flamegraph/src/lib/ngx-flamechart.component.css
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamechart.component.css
@@ -4,10 +4,11 @@ svg {
 
 :host {
   position: relative;
+  display: block;
 }
 
 .chart-wrapper {
-  position: absolute;
+  position: relative;
 }
 
 .grayscale {
