--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -4,6 +4,7 @@
   (frameMouseLeave)="frameMouseLeave.emit($event)"
   [layout]="siblingLayout"
   [data]="entries"
+  [depth]="depth"
   [levelHeight]="levelHeight"
   [width]="width">
 </flamegraph>
