--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
@@ -4,17 +4,18 @@ svg {
 
 :host {
   position: relative;
+  display: block;
 }
 
 .chart-wrapper {
-  position: absolute;
+  position: relative;
 }
 
 .grayscale {
   filter: grayscale(1);
-  opacity: 0.3;
+  opacity: 0.2;
 }
 
 g {
-  transition: width 0.3s ease-out, transform 0.3s ease-out;
+  transition: width 0.2s ease-out, transform 0.2s ease-out;
 }
