--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -1,4 +1,4 @@
-<flamegraph
+<ngx-flamegraph-graph
   (frameClick)="frameClick.emit($event)"
   (frameMouseEnter)="frameMouseEnter.emit($event)"
   (frameMouseLeave)="frameMouseLeave.emit($event)"
@@ -7,4 +7,4 @@
   [depth]="depth"
   [levelHeight]="levelHeight"
   [width]="width">
-</flamegraph>
+</ngx-flamegraph-graph>
