--- a/projects/ngx-flamegraph/src/lib/ngx-flamechart.component.css
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamechart.component.css
@@ -1,17 +1,4 @@
-svg {
-  pointer-events: none;
-}
-
-:host {
+ngx-flamegraph {
   position: relative;
   display: block;
-}
-
-.chart-wrapper {
-  position: relative;
-}
-
-.grayscale {
-  filter: grayscale(1);
-  opacity: 0.3;
 }
