fix: run resize observer callback inside angular zone

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <h3> Fixed Width</h3>
 <div class="wrapper-fixed-width">
-  <ngx-flamegraph [config]="config"></ngx-flamegraph>
+  <ngx-flamegraph [config]="config" [width]="900"></ngx-flamegraph>
 </div>
 
 <h3> Responsive </h3>
