perf(flamegraph): listen to mouseover and mouseleave outside angular zone

--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -1,8 +1,8 @@
 <ngx-flamegraph-graph
   *ngIf="width !== null"
   (frameClick)="frameClick.emit($event)"
-  (frameMouseEnter)="frameMouseEnter.emit($event)"
-  (frameMouseLeave)="frameMouseLeave.emit($event)"
+  (frameMouseEnter)="onFrameMouseEnter($event)"
+  (frameMouseLeave)="onFrameMouseLeave($event)"
   (zoom)="onZoom($event)"
   [layout]="siblingLayout"
   [data]="entries"
