--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.html
@@ -3,8 +3,8 @@
     <g flamegraph-node
        *ngFor="let entry of entries; index as i"
        (click)="frameClick.emit(entry.original)"
-       (mouseover)="frameMouseEnter.emit(entry.original)"
-       (mouseleave)="frameMouseLeave.emit(entry.original)"
+       (mouseOverZoneless)="frameMouseEnter.emit(entry.original)"
+       (mouseLeaveZoneless)="frameMouseLeave.emit(entry.original)"
        (zoom)="zoom.emit($event)"
        [entry]="entry"
        [height]="levelHeight"
