perf: optimize flamegraph animations
Notably there were two design decisions made to optimize the flamegraph component:

1. No animations are performed on svg elements. Animating vector graphics requires the browser to rasterize each indiviudal frame (even if we're simply animating on transform translate). Instead svg elements are wrapped in divs and their parent divs are animated with transform trasnlate, which skips rasterization and jumps straight to compositing.
2. Expansion animations rely on animating tranform scaleX instead of width. Animating width would cause the browser to trigger layout recalculation on each frame, whereas animating transform scaleX relies on the compositor.

--- a/projects/ngx-flamegraph/src/lib/flamegraph-node/flamegraph-node.component.html
+++ b/projects/ngx-flamegraph/src/lib/flamegraph-node/flamegraph-node.component.html
@@ -1,20 +1,13 @@
 <svg:rect
-  (dblclick)="zoom.emit(entry)"
+  (dblclick)="zoom.emit()"
   stroke="white"
   stroke-width="1px"
   pointer-events="all"
+  width="100%"
   rx="1"
   ry="1"
   class="ngx-fg-rect"
-  [class.ngx-fg-navigable]="entry.navigable"
-  [attr.width]="width"
+  [class.ngx-fg-navigable]="navigable"
   [attr.height]="height"
-  [attr.fill]="entry.color">
+  [attr.fill]="color">
 </svg:rect>
-<svg:foreignObject
-  [attr.width]="width"
-  [attr.height]="height">
-  <xhtml:div class="ngx-fg-label" [class.ngx-fg-navigable]="entry.navigable">
-    {{entry.label}}
-  </xhtml:div>
-</svg:foreignObject>
