--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
@@ -3,19 +3,33 @@
 }
 
 ngx-flamegraph-graph {
-  position: relative;
+  position: absolute;
   display: block;
+  overflow: hidden;
 }
 
-.ngx-fg-chart-wrapper {
-  position: relative;
+.svg-wrapper {
+  width: 100%;
+  transform-origin: left;
 }
 
-.ngx-fg-grayscale {
-  filter: grayscale(1);
-  opacity: 0.2;
+.svg-wrapper {
+  transition: transform 0.333s ease-in-out, opacity 0.333s ease-in-out;
 }
 
-.ngx-fg-svg-g {
-  transition: width 0.2s ease-out, transform 0.2s ease-out;
+.bar-text {
+  position: absolute;
+  z-index: 1;
+  overflow: hidden;
+  pointer-events: none;
+  user-select: none;
+  color: white;
+  padding: 5px;
+  font-family: sans-serif;
+  font-size: 80%;
+}
+
+.hide-bar {
+  opacity: 0;
+  pointer-events: none;
 }
