perf(flamegraph): reduce DOM & memory load; speed up rendering
- Reduce the DOM load by removing all redundant bar/node elements. Use a minimal structure.
- Use event delegation instead of separate events for each bar/node. This should also reduce memory load.
- ~~Use `clip-path` instead of `transform:scaleX`. Both are hardware-accelerated. The `clip-path` is not animated though which means that when zooming out the bars will have a fixed width. This, however, **speeds up the rendering x5-x6** on zoom. The `transform:translate` positioning is still animated though, so overall the UX and animations don't look vastly different.~~  The rendering is sped up. There are no more long tasks. will-change is employed.
- The `ResizeObserver` used for the responsiveness is now debounced. The callback uses `element.clientWidth` which triggers reflow. Resizing the window leads to many layout recalculations, i.e. long tasks and lag spikes due to main thread being blocked.
- Introduce 1px gap among all bars instead of a border (vertical borders didn't seem to work effectively); Fix text overflow issues (noticable on dark background).

--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
@@ -1,35 +1,60 @@
-.ngx-fg-svg {
-  pointer-events: none;
-}
-
 ngx-flamegraph-graph {
   position: absolute;
   display: block;
   overflow: hidden;
 }
 
-.svg-wrapper {
-  width: 100%;
-  transform-origin: left;
-}
-
-.svg-wrapper {
-  transition: transform 0.333s ease-in-out, opacity 0.333s ease-in-out;
-}
-
-.bar-text {
+.ngx-fg-bar {
   position: absolute;
+  transform-origin: left;
+  transition: transform 0.333s ease-in-out, opacity 0.333s ease-in-out;
   z-index: 1;
   overflow: hidden;
-  pointer-events: none;
+  width: 100%;
   user-select: none;
   color: white;
-  padding: 5px;
   font-family: sans-serif;
   font-size: 80%;
+  box-sizing: border-box;
+  cursor: default;
+  will-change: transform;
 }
 
-.hide-bar {
-  opacity: 0;
-  pointer-events: none;
+.ngx-fg-bar::before {
+  content: '';
+  position: absolute;
+  background: var(--bg);
+  top: 0;
+  left: 0;
+  height: inherit;
+  width: inherit;
+  transition: transform 0.333s ease-in-out;
+  transform-origin: left;
+  transform: scaleX(var(--scale-x));
+  will-change: transform;
+}
+
+.ngx-fg-bar::after {
+  content: attr(data-label);
+  position: absolute;
+  top: 0;
+  left: 0;
+  clip-path: var(--clip-path);
+  height: inherit;
+  width: 100%;
+  overflow: hidden;
+  padding: 4px 5px;
+  box-sizing: border-box;
+}
+
+.ngx-fg-bar.ngx-fg-hide-bar::before {
+  transform: scaleX(0);
+}
+
+.ngx-fg-bar.ngx-fg-hide-bar::after {
+  clip-path: inset(0 100% 0 0);
+}
+
+.ngx-fg-navigable {
+  opacity: 0.5;
 }
