--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -9,8 +9,8 @@
   [depth]="depth"
   [levelHeight]="levelHeight"
   [width]="width"
-  [style.height.px]="depth * levelHeight"
+  [style.height.px]="depth * levelHeight + depth"
   [style.width.px]="width"
   [minimumBarSize]="minimumBarSize"
-  >
+>
 </ngx-flamegraph-graph>
