--- a/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
+++ b/projects/ngx-flamegraph/src/lib/ngx-flamegraph.component.html
@@ -12,5 +12,6 @@
   [style.height.px]="depth * levelHeight + depth"
   [style.width.px]="width"
   [minimumBarSize]="minimumBarSize"
+  [tooltipEnabled]="tooltipEnabled"
 >
 </ngx-flamegraph-graph>
