--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
@@ -12,12 +12,16 @@ ngx-flamegraph-graph {
   overflow: hidden;
   width: 100%;
   user-select: none;
-  color: white;
-  font-family: sans-serif;
-  font-size: 80%;
+  color: var(--ngx-fg-bar-text-color, white);
+  font-family: var(--ngx-fg-font-family, sans-serif);
+  font-size: var(--ngx-fg-bar-font-size, 0.8rem);
   box-sizing: border-box;
   cursor: default;
   will-change: transform;
+}
+
+.ngx-fg-bar:hover {
+  filter: brightness(110%);
 }
 
 .ngx-fg-bar::before {
@@ -43,7 +47,7 @@ ngx-flamegraph-graph {
   height: inherit;
   width: 100%;
   overflow: hidden;
-  padding: 4px 5px;
+  padding-inline: var(--ngx-fg-bar-padding-inline, 0.375rem);
   box-sizing: border-box;
 }
 
@@ -57,4 +61,19 @@ ngx-flamegraph-graph {
 
 .ngx-fg-navigable {
   opacity: 0.5;
+}
+
+.ngx-fg-tooltip {
+  position: fixed;
+  top: 15px;
+  left: 10px;
+  font-family: var(--ngx-fg-font-family, sans-serif);
+  font-size: var(--ngx-fg-tooltip-font-size, 0.75rem);
+  padding: var(--ngx-fg-tooltip-padding, 0.375rem 0.5rem);
+  color: var(--ngx-fg-tooltip-text-color, white);
+  background: var(--ngx-fg-tooltip-background, rgba(0, 0, 0, 0.8));
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 0.2rem;
+  pointer-events: none;
+  z-index: 1;
 }
