--- a/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
+++ b/projects/ngx-flamegraph/src/lib/flamegraph/flamegraph.component.css
@@ -20,22 +20,21 @@ ngx-flamegraph-graph {
   will-change: transform;
 }
 
-.ngx-fg-bar:hover {
-  filter: brightness(110%);
-}
-
-.ngx-fg-bar::before {
-  content: '';
+.ngx-fg-bar-fill {
   position: absolute;
-  background: var(--bg);
   top: 0;
   left: 0;
   height: inherit;
   width: inherit;
   transition: transform 0.333s ease-in-out;
   transform-origin: left;
+  /* We use a var, so `ng-fg-hide-bar` can easily override the style without !important. */
   transform: scaleX(var(--scale-x));
   will-change: transform;
+}
+
+.ngx-fg-bar-fill:hover {
+  filter: brightness(110%);
 }
 
 .ngx-fg-bar::after {
@@ -49,9 +48,10 @@ ngx-flamegraph-graph {
   overflow: hidden;
   padding-inline: var(--ngx-fg-bar-padding-inline, 0.375rem);
   box-sizing: border-box;
+  pointer-events: none;
 }
 
-.ngx-fg-bar.ngx-fg-hide-bar::before {
+.ngx-fg-bar.ngx-fg-hide-bar > .ngx-fg-bar-fill {
   transform: scaleX(0);
 }
 
@@ -65,8 +65,8 @@ ngx-flamegraph-graph {
 
 .ngx-fg-tooltip {
   position: fixed;
-  top: 15px;
-  left: 10px;
+  top: 0;
+  left: 0;
   font-family: var(--ngx-fg-font-family, sans-serif);
   font-size: var(--ngx-fg-tooltip-font-size, 0.75rem);
   padding: var(--ngx-fg-tooltip-padding, 0.375rem 0.5rem);
